2002-11-12  Masatake YAMATO  <jet@gyve.org>

	* configure.in: required frontline-0.5.4.
	You can get both autotrace and frontline from
	http://sourceforge.net/autotrace.
	(AC_PROG_AS): wrapped by ifdef.
	Missing to add ChangeLog before commiting.

2002-11-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-gradient.c (nr_rgradient_render_generic_symmetric): Fix
	array read overflow
	(nr_rgradient_render_generic_optimized): Ditto

	* src/widgets/paint-selector.c (sp_paint_selector_write_lineargradient): Normalize
	gradient transform and recalculate positions before applying
	(sp_paint_selector_write_radialgradient): Ditto

	* src/widgets/gradient-selector.c (sp_gradient_selector_set_mode): New method
	(sp_gradient_selector_init): Added units and spread optionmenu

	* src/widgets/gradient-position.c (sp_gradient_position_motion_notify): Comment
	out nonuniform placement, as it did not work correctly

	* src/libnr/nr-matrix.c (nr_matrix_d_invert): Fix really silly bug generating identities
	(nr_matrix_f_invert): Ditto

	* src/dialogs/stroke-style.c (sp_stroke_style_paint_update): Set gradient props

	* src/dialogs/fill-style.c (sp_fill_style_widget_update): Set gradient props

	* src/sp-gradient.h: Changed units enumeration, so 0 is default

	* src/display/nr-arena-shape.c (nr_arena_shape_pick): Re-enable SVP based check,
	only do winding check, if object is filled

	* src/file.c: Removed printing code, only frontends remain

	* src/print.c (sp_print_document): Implement
	(sp_print_document_to_file): Ditto

	* src/sp-gradient.c (sp_gradient_ensure_colors): Fixed writing last color
	outside of allocated color vector

2002-11-10  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Commented out AM_PROG_AS, as there is not such macro
	in my installation

	* src/libnrtype/nr-typeface.h: Signature change for outline unref

	* src/libnrtype/nr-type-gnome.c (nr_typeface_gnome_glyph_outline_get): Implemented
	vertical metrics outline